--- a/jupyter/notebooks/modeling/assessment-DMML.ipynb
+++ b/jupyter/notebooks/modeling/assessment-DMML.ipynb
@@ -223,7 +223,9 @@
     }
    ],
    "source": [
-    "X = pd.read_csv(\"x_train_gr_smpl.csv\", delimiter=',')\n",
+    "file_path = \"../../data/raw/\"\n",
+    "\n",
+    "X = pd.read_csv(f\"{file_path}x_train_gr_smpl.csv\", delimiter=',')\n",
     "X.head()"
    ]
   },
@@ -296,37 +298,37 @@
     }
    ],
    "source": [
-    "Y = pd.read_csv(\"y_train_smpl.csv\", delimiter=',')\n",
+    "Y = pd.read_csv(f\"{file_path}y_train_smpl.csv\", delimiter=',')\n",
     "Y.columns = ['target']\n",
     "\n",
-    "y0 = pd.read_csv(\"y_train_smpl_0.csv\", delimiter=',')\n",
+    "y0 = pd.read_csv(f\"{file_path}y_train_smpl_0.csv\", delimiter=',')\n",
     "y0.columns = ['target']\n",
     "\n",
-    "y1 = pd.read_csv(\"y_train_smpl_1.csv\", delimiter=',')\n",
+    "y1 = pd.read_csv(f\"{file_path}y_train_smpl_1.csv\", delimiter=',')\n",
     "y1.columns = ['target']\n",
     "\n",
-    "y2 = pd.read_csv(\"y_train_smpl_2.csv\", delimiter=',')\n",
+    "y2 = pd.read_csv(f\"{file_path}y_train_smpl_2.csv\", delimiter=',')\n",
     "y2.columns = ['target']\n",
     "\n",
-    "y3 = pd.read_csv(\"y_train_smpl_3.csv\", delimiter=',')\n",
+    "y3 = pd.read_csv(f\"{file_path}y_train_smpl_3.csv\", delimiter=',')\n",
     "y3.columns = ['target']\n",
     "\n",
-    "y4 = pd.read_csv(\"y_train_smpl_4.csv\", delimiter=',')\n",
+    "y4 = pd.read_csv(f\"{file_path}y_train_smpl_4.csv\", delimiter=',')\n",
     "y4.columns = ['target']\n",
     "\n",
-    "y5 = pd.read_csv(\"y_train_smpl_5.csv\", delimiter=',')\n",
+    "y5 = pd.read_csv(f\"{file_path}y_train_smpl_5.csv\", delimiter=',')\n",
     "y5.columns = ['target']\n",
     "\n",
-    "y6 = pd.read_csv(\"y_train_smpl_6.csv\", delimiter=',')\n",
+    "y6 = pd.read_csv(f\"{file_path}y_train_smpl_6.csv\", delimiter=',')\n",
     "y6.columns = ['target']\n",
     "\n",
-    "y7 = pd.read_csv(\"y_train_smpl_7.csv\", delimiter=',')\n",
+    "y7 = pd.read_csv(f\"{file_path}y_train_smpl_7.csv\", delimiter=',')\n",
     "y7.columns = ['target']\n",
     "\n",
-    "y8 = pd.read_csv(\"y_train_smpl_8.csv\", delimiter=',')\n",
+    "y8 = pd.read_csv(f\"{file_path}y_train_smpl_8.csv\", delimiter=',')\n",
     "y8.columns = ['target']\n",
     "\n",
-    "y9 = pd.read_csv(\"y_train_smpl_9.csv\", delimiter=',')\n",
+    "y9 = pd.read_csv(f\"{file_path}y_train_smpl_9.csv\", delimiter=',')\n",
     "y9.columns = ['target']\n",
     "\n",
     "Y.tail()"
@@ -336,7 +338,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# create datasets"
+    "# Create datasets"
    ]
   },
   {
@@ -359,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +552,7 @@
        "[5 rows x 2305 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1354,7 +1356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
