--- a/jupyter/notebooks/modeling/assessment-DMML.ipynb
+++ b/jupyter/notebooks/modeling/assessment-DMML.ipynb
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
        "[5 rows x 2305 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1149,8 +1149,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## correlation matrix"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "\n",
+    "#plt.matshow(train_smpl.corr())\n",
+    "#plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1194,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1246,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1255,7 +1275,7 @@
        "0.4595500239348971"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1276,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1310,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1326,17 +1346,27 @@
       "0.86668262326472\n",
       "0.507898516036381\n",
       "0.8128291048348492\n",
-      "0.6685016754427956\n"
+      "0.6685016754427956\n",
+      "mean:  0.6939444710387745\n"
      ]
     }
    ],
    "source": [
     "from sklearn.naive_bayes import GaussianNB\n",
-    "\n",
+    "scores = []\n",
     "for X_train, X_test, y_train, y_test in zip(X_train_10classes, X_test_10classes, y_train_10classes, y_test_10classes):    \n",
     "    clf = GaussianNB()\n",
     "    clf.fit(X_train, y_train)\n",
-    "    print(clf.score(X_test, y_test))"
+    "    scores.append(clf.score(X_test, y_test))\n",
+    "    print(clf.score(X_test, y_test))\n",
+    "print(\"mean: \", sum(scores)/len(scores))"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "Multinomial Nb is less accurate than Gaussian Nb ( 0.45 <= 0.69 )"
    ]
   }
  ],
@@ -1356,7 +1386,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
