--- a/jupyter/notebooks/modeling/assessment-DMML.ipynb
+++ b/jupyter/notebooks/modeling/assessment-DMML.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
        "[5 rows x 2304 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
        "12659       9"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,225 +338,81 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Create datasets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_smpl_0 = pd.concat([X, y0], axis=1)\n",
-    "train_smpl_1 = pd.concat([X, y1], axis=1)\n",
-    "train_smpl_2 = pd.concat([X, y2], axis=1)\n",
-    "train_smpl_3 = pd.concat([X, y3], axis=1)\n",
-    "train_smpl_4 = pd.concat([X, y4], axis=1)\n",
-    "train_smpl_5 = pd.concat([X, y5], axis=1)\n",
-    "train_smpl_6 = pd.concat([X, y6], axis=1)\n",
-    "train_smpl_7 = pd.concat([X, y7], axis=1)\n",
-    "train_smpl_8 = pd.concat([X, y8], axis=1)\n",
-    "train_smpl_9 = pd.concat([X, y9], axis=1)"
+    "# 3. Reducing the size"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
-       "      <th>...</th>\n",
-       "      <th>2295</th>\n",
-       "      <th>2296</th>\n",
-       "      <th>2297</th>\n",
-       "      <th>2298</th>\n",
-       "      <th>2299</th>\n",
-       "      <th>2300</th>\n",
-       "      <th>2301</th>\n",
-       "      <th>2302</th>\n",
-       "      <th>2303</th>\n",
-       "      <th>target</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>30.0</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>31.0</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>37.0</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>37.0</td>\n",
-       "      <td>37.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>30.0</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>37.0</td>\n",
-       "      <td>37.0</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>26.0</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>37.0</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>37.0</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>25.0</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>37.0</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>37.0</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 2305 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      0     1     2     3     4     5     6     7     8     9  ...  2295  \\\n",
-       "0  30.0  29.0  28.0  29.0  31.0  30.0  29.0  28.0  27.0  26.0  ...  32.0   \n",
-       "1  31.0  31.0  33.0  32.0  31.0  30.0  29.0  28.0  28.0  28.0  ...  34.0   \n",
-       "2  30.0  30.0  31.0  29.0  28.0  27.0  26.0  28.0  30.0  31.0  ...  35.0   \n",
-       "3  26.0  25.0  24.0  24.0  24.0  27.0  28.0  29.0  29.0  30.0  ...  34.0   \n",
-       "4  25.0  26.0  28.0  28.0  28.0  28.0  28.0  27.0  26.0  25.0  ...  31.0   \n",
-       "\n",
-       "   2296  2297  2298  2299  2300  2301  2302  2303  target  \n",
-       "0  35.0  38.0  39.0  39.0  40.0  39.0  39.0  38.0       0  \n",
-       "1  35.0  36.0  36.0  37.0  38.0  38.0  37.0  37.0       0  \n",
-       "2  37.0  37.0  38.0  39.0  38.0  38.0  39.0  40.0       0  \n",
-       "3  36.0  37.0  38.0  42.0  40.0  37.0  36.0  36.0       0  \n",
-       "4  33.0  37.0  38.0  37.0  36.0  36.0  35.0  35.0       0  \n",
-       "\n",
-       "[5 rows x 2305 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "#Different types of feature selection\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_smpl_0 = pd.concat([X, y0], axis=1)\n",
+    "train_smpl_1 = pd.concat([X, y1], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_smpl_2 = pd.concat([X, y2], axis=1)\n",
+    "train_smpl_3 = pd.concat([X, y3], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_smpl_4 = pd.concat([X, y4], axis=1)\n",
+    "train_smpl_5 = pd.concat([X, y5], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_smpl_6 = pd.concat([X, y6], axis=1)\n",
+    "train_smpl_7 = pd.concat([X, y7], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_smpl_8 = pd.concat([X, y8], axis=1)\n",
+    "train_smpl_9 = pd.concat([X, y9], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "train_smpl = pd.concat([X, Y], axis=1)\n",
     "train_smpl.head()"
@@ -566,7 +422,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Randomisation"
+    "# 2. Data Randomisation"
    ]
   },
   {
@@ -1131,21 +987,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Reducing the size"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Features/Attributes Selection"
+    "# 6. Features/Attributes Selection"
    ]
   },
   {
@@ -1386,7 +1228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
