Add text doing initial analysis of the confusion matrix
This mostly raises more questions than it answers, as the findings are more like prompts to investigate further. I have hopes that this is useful all the same.

Also, this commit upgrades Python to version 3.6.9 apparently.

--- a/jupyter/notebooks/modeling/assessment-DMML.ipynb
+++ b/jupyter/notebooks/modeling/assessment-DMML.ipynb
@@ -577,7 +577,7 @@
     {
      "data": {
       "text/plain": [
-       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x7fc612132b38>]],\n",
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x7fe23ca31438>]],\n",
        "      dtype=object)"
       ]
      },
@@ -1369,27 +1369,7 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[168,  47,   4,   0,  44,  34,  11, 102,  35,  28],\n",
-       "       [169,  78,  44,   1,  31,   3,   1, 123,  38, 120],\n",
-       "       [ 10,  12,  87,   0,   1,   0,   0,  12,   8,   0],\n",
-       "       [ 49,   6,  11, 260,  15,   0,   0,  16,  36,  53],\n",
-       "       [ 54,  22,  39,  17, 199,   0,  12, 215, 101,  19],\n",
-       "       [ 62,  11,   5,   1,  12, 446,  57,  61,  50,  19],\n",
-       "       [ 31,   0,   0,   1,   0,   0, 171,   8,  17,  28],\n",
-       "       [ 14,   6,   4,   0,   3,   0,   0,  48,   0,   0],\n",
-       "       [ 83,  12,  30,   0,  12,   4,  51,  77, 392,  31],\n",
-       "       [  1,  11,   0,   0,   0,   1,   7,   2,   3,  71]])"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.metrics import confusion_matrix\n",
     "\n",
@@ -1475,6 +1455,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "473\n",
+      "127\n",
+      "137\n",
+      "20\n",
+      "118\n",
+      "42\n",
+      "139\n",
+      "616\n",
+      "288\n",
+      "298\n"
+     ]
+    }
+   ],
+   "source": [
+    "# looking for devious class labels that take high numbers of misclassifications\n",
+    "for i in range(conf_mat.shape[1]):\n",
+    "    column = conf_mat.T[i]\n",
+    "    misclassifications = column.sum() - column[i]\n",
+    "    print(misclassifications)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1483,7 +1493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1517,7 +1527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1555,6 +1565,35 @@
    "source": [
     "Multinomial Nb is less accurate than Gaussian Nb ( 0.45 <= 0.69 )"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusions from initial experiments (q7)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using the multilabel confusion matrix, it is apparent that the multinomial Naïve Bayes classifier struggled with some classes, predicting them incorrectly most of the time. \n",
+    "\n",
+    "In particular, class 8 was more often classified as class 1 (probability 0.278), class 7 (probability 0.2023) and class 6 (probability 0.1974) before itself (probability 0.1283).\n",
+    "\n",
+    "//It looks like the classifier was confused by ...\n",
+    "\n",
+    "\n",
+    "\n",
+    "The strongest misclassification in the matrix is true members of class 3 being classified as class 7 (probability 0.2023). However, there is relatively very little of the reverse misclassification (true class 7 predicted as class 3).\n",
+    "\n",
+    "//^^ investigate this?\n",
+    "\n",
+    "\n",
+    "\n",
+    "Class 7 punches above its weight as the most abundant misclassification which is perhaps due to the relative infrequency of data for class 7. There must be some other factor, as there are less populated classes.\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -1573,7 +1612,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
