--- a/jupyter/notebooks/modeling/assessment-DMML.ipynb
+++ b/jupyter/notebooks/modeling/assessment-DMML.ipynb
@@ -543,14 +543,14 @@
     "y_tests_reduced = [ y_test_20, y_test_50, y_test_100]\n",
     "\n",
     "for X_trains, X_tests, y_trains, y_tests in zip(X_trains_reduced, X_tests_reduced, y_trains_reduced, y_tests_reduced):    \n",
-    "\tclf = GaussianNB()\n",
-    "\tclf.fit(X_trains, y_trains)\n",
-    "\tprint(f\"Gaussian NB 20/50/100: {clf.score(X_tests, y_tests)}\")\n",
+    "    clf = GaussianNB()\n",
+    "    clf.fit(X_trains, y_trains)\n",
+    "    print(f\"Gaussian NB 20/50/100: {clf.score(X_tests, y_tests)}\")\n",
     "\n",
     "for X_trains, X_tests, y_trains, y_tests in zip(X_trains_reduced, X_tests_reduced, y_trains_reduced, y_tests_reduced):    \n",
-    "\tclf = MultinomialNB()\n",
-    "\tclf.fit(X_trains, y_trains)\n",
-    "\tprint(f\"Multinomial NB 20/50/100: {clf.score(X_tests, y_tests)}\")\n"
+    "    clf = MultinomialNB()\n",
+    "    clf.fit(X_trains, y_trains)\n",
+    "    print(f\"Multinomial NB 20/50/100: {clf.score(X_tests, y_tests)}\")\n"
    ]
   },
   {
@@ -568,18 +568,18 @@
    "source": [
     "scores = []\n",
     "for X_train, X_test, y_train, y_test in zip(X_train_10classes, X_test_10classes, y_train_10classes, y_test_10classes):    \n",
-    "\tclf = GaussianNB()\n",
-    "\tclf.fit(X_train, y_train)\n",
-    "\tscores.append(clf.score(X_test, y_test))\n",
-    "\tprint(f\"Gaussian NB 10 classes:{clf.score(X_test, y_test)}\")\n",
+    "    clf = GaussianNB()\n",
+    "    clf.fit(X_train, y_train)\n",
+    "    scores.append(clf.score(X_test, y_test))\n",
+    "    print(f\"Gaussian NB 10 classes:{clf.score(X_test, y_test)}\")\n",
     "print(\"Gaussian NB Mean: \", sum(scores)/len(scores))\n",
     "\n",
     "scores2 = []\n",
     "for X_train, X_test, y_train, y_test in zip(X_train_10classes, X_test_10classes, y_train_10classes, y_test_10classes):    \n",
-    "\tclf = MultinomialNB()\n",
-    "\tclf.fit(X_train, y_train)\n",
-    "\tscores2.append(clf.score(X_test, y_test))\n",
-    "\tprint(f\"Multinomial NB 10 classes:{clf.score(X_test, y_test)}\")\n",
+    "    clf = MultinomialNB()\n",
+    "    clf.fit(X_train, y_train)\n",
+    "    scores2.append(clf.score(X_test, y_test))\n",
+    "    print(f\"Multinomial NB 10 classes:{clf.score(X_test, y_test)}\")\n",
     "print(\"Multinomial NB Mean: \", sum(scores2)/len(scores2))\n"
    ]
   },
