--- a/jupyter/notebooks/modeling/assessment-DMML.ipynb
+++ b/jupyter/notebooks/modeling/assessment-DMML.ipynb
@@ -433,9 +433,9 @@
     "                          title='Confusion matrix',\n",
     "                          cmap=None,\n",
     "                          normalize=True):\n",
-    "\"\"\"\n",
-    "    https://stackoverflow.com/a/50386871\n",
-    "\"\"\"\n",
+    "    \"\"\"\n",
+    "        https://stackoverflow.com/a/50386871\n",
+    "    \"\"\"\n",
     "\n",
     "    accuracy = np.trace(cm) / float(np.sum(cm))\n",
     "    misclass = 1 - accuracy\n",
@@ -579,7 +579,7 @@
     "    clf = MultinomialNB()\n",
     "    clf.fit(X_train, y_train)\n",
     "    scores2.append(clf.score(X_test, y_test))\n",
-    "    print(f\"Multinomial NB 10 classes:{clf.score(X_test, y_test)}\")\n",
+    "    print(f\"Multinomial NB 10 classes: {clf.score(X_test, y_test)}\")\n",
     "print(\"Multinomial NB Mean: \", sum(scores2)/len(scores2))\n"
    ]
   },
@@ -589,7 +589,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Multinomial Nb is less accurate than Gaussian Nb ( 0.45 <= 0.69 )"
+    "#Multinomial Nb is more accurate than Gaussian Nb ( 0.75 > 0.69 )"
    ]
   },
   {
