--- a/jupyter/notebooks/modeling/assessment-DMML.ipynb
+++ b/jupyter/notebooks/modeling/assessment-DMML.ipynb
@@ -283,11 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# ros = RandomOverSampler(random_state=0)\n",
@@ -313,11 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\n",
@@ -329,11 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# X_oversampled = pd.DataFrame(data=X_oversampled)\n",
@@ -361,11 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# X_undersampled = pd.DataFrame(data=X_undersampled)\n",
@@ -504,11 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# from sklearn.naive_bayes import MultinomialNB\n",
@@ -531,11 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# from sklearn.naive_bayes import MultinomialNB\n",
@@ -559,11 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -804,7 +776,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Clustering"
+    "## 10. Clustering"
    ]
   },
   {
@@ -818,16 +790,25 @@
     "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
     "# scaler = MinMaxScaler(feature_range=[0, 1])\n",
-    "# data_rescaled = scaler.fit_transform(train_smpl_0[train_smpl_0.columns[:-1]])\n",
     "\n",
-    "#pca = PCA(n_components=250)\n",
-    "# training = pd.DataFrame(pca.fit_transform(train_smpl_1))\n",
-    "# training = pd.DataFrame(data_rescaled)\n",
-    "training = pd.DataFrame(train_smpl_1)\n",
-    "training[\"target\"] = train_smpl_1[\"target\"]\n",
+    "# pca = PCA(n_components=50)\n",
+    "# smpl_data = pd.DataFrame(pca.fit_transform(train_resampled[train_resampled.columns[:-1]]))\n",
+    "# smpl_data = pd.DataFrame(scaler.fit_transform(smpl_data))\n",
+    "# smpl_data[\"target\"] = train_smpl[\"target\"]\n",
     "\n",
-    "kmeans = KMeans(n_clusters=2, random_state=2)\n",
-    "training[\"cluster\"] = kmeans.fit_predict(training[training.columns[:-1]])"
+    "# Training sample for train_smpl\n",
+    "\n",
+    "smpl_data = train_smpl.copy()\n",
+    "\n",
+    "kmeans = KMeans(n_clusters=10, random_state=2)\n",
+    "smpl_data[\"cluster\"] = kmeans.fit_predict(smpl_data[smpl_data.columns[:-1]])\n",
+    "# smpl_data[\"w_class_attribute\"] = kmeans.fit_predict(smpl_data[smpl_data.columns[:-1]])\n",
+    "\n",
+    "resampled_data = train_resampled.copy()\n",
+    "\n",
+    "kmeans = KMeans(n_clusters=10, random_state=2)\n",
+    "resampled_data[\"cluster\"] = kmeans.fit_predict(resampled_data[resampled_data.columns[:-1]])\n",
+    "# resampled_data[\"w_class_attribute\"] = kmeans.fit_predict(resampled_data[resampled_data.columns[:-1]])"
    ]
   },
   {
@@ -836,8 +817,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# weight = [1] * 251\n",
-    "training[\"cluster_class_attribute\"] = kmeans.fit_predict(training)"
+    "from sklearn.cluster import KMeans\n",
+    "\n",
+    "# Training sample for train_smpl_<label> \n",
+    "training_dataframe = [train_smpl_0.copy(), train_smpl_1.copy(), train_smpl_2.copy(), train_smpl_3.copy(), train_smpl_4.copy(),\n",
+    "                      train_smpl_5.copy(), train_smpl_6.copy(), train_smpl_7.copy(), train_smpl_8.copy(), train_smpl_9.copy()]\n",
+    "\n",
+    "kmeans = KMeans(n_clusters=2, random_state=2)\n",
+    "for dataframe in training_dataframe:\n",
+    "    dataframe[\"cluster\"] = kmeans.fit_predict(dataframe[dataframe.columns[:-1]])"
    ]
   },
   {
@@ -867,24 +855,157 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result = training[training.columns[-3:]]\n",
-    "# target = training[training.columns[-3:-1]]\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "# print(target.groupby(['target']).count())\n",
-    "result_cluster = result.groupby(['target', 'cluster']).count()\n",
-    "result_class_attribute = result.groupby(['target', 'cluster_class_attribute']).count()\n",
-    "result_cluster[\"class\"] = result_class_attribute[\"cluster\"]\n",
-    "result_cluster"
+    "# result_class_attribute = result.groupby(['target', 'cluster_class_attribute']).count()\n",
+    "# result_cluster[\"class\"] = result_class_attribute[\"cluster\"]\n",
+    "\n",
+    "def plot_clustering(result, nb_attribute, nb_cluster, name_cluster=\"cluster\"):\n",
+    "    df = result[result.columns[-3:]]\n",
+    "    result_cluster = df.groupby(['target', name_cluster]).count()\n",
+    "    result_cluster.reset_index(inplace=True)\n",
+    "    result_data = []\n",
+    "    for i in range(0, nb_cluster):\n",
+    "        result_data.append([])\n",
+    "        if name_cluster == \"w_class_attribute\":\n",
+    "            data = result_cluster[result_cluster.w_class_attribute == i].drop([name_cluster], axis=1).to_dict('split')['data']\n",
+    "        else:\n",
+    "            data = result_cluster[result_cluster.cluster == i].drop([name_cluster], axis=1).to_dict('split')['data']\n",
+    "        data = [{x[0]: x[1]} for x in data]\n",
+    "        data = dict(pair for d in data for pair in d.items())\n",
+    "        for j in range(0, nb_attribute):\n",
+    "            result_data[i].append(data[j] if j in data else 0)\n",
+    "\n",
+    "    data = np.array(result_data)\n",
+    "\n",
+    "    color_list = ['#FC7A57', '#EEFC57', '#5E5B52', '#8DB580', '#BBE5ED', '#4281A4', '#BAD9B5', '#CA7DF9', '#04E762', '#723D46']\n",
+    "\n",
+    "    X = np.arange(data.shape[1])\n",
+    "    for i in range(data.shape[0]):\n",
+    "        plt.bar(X, data[i],\n",
+    "            bottom = np.sum(data[:i], axis = 0),\n",
+    "            color = color_list[i % len(color_list)],\n",
+    "               label=f\"Cluster {i}\")\n",
+    "\n",
+    "    plt.legend(loc=\"best\", bbox_to_anchor=(1.0, 1.00))\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "# Plot train_smpl_<label> clusters\n",
+    "i = 0\n",
+    "for dataframe in training_dataframe:\n",
+    "    print(f\"Training sample n°{i}:\")\n",
+    "    plot_clustering(dataframe, 10, 2)\n",
+    "    i += 1\n",
+    "\"\"\"\n",
+    "# Plot train_smpl clusters\n",
+    "print(f\"Training sample all data (without class attribute):\")\n",
+    "plot_clustering(smpl_data, 10, 10)\n",
+    "# print(f\"Training sample all data (with class attribute):\")\n",
+    "# plot_clustering(smpl_data, 10, 10, 'w_class_attribute')\n",
+    "\n",
+    "# Plot train_smpl resampled clusters\n",
+    "print(f\"Training resample data (without class attribute):\")\n",
+    "plot_clustering(resampled_data, 10, 10)\n",
+    "# print(f\"Training resample data (with class attribute):\")\n",
+    "# plot_clustering(resampled_data, 10, 10, 'w_class_attribute')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Clustering notes\n",
+    "## 11. Clustering notes\n",
     "\n",
-    "The clustering classification is not as good as the Gaussian Naives model. It strugle with attributing the classes to the good target."
+    "The clustering classification is not as good as the Gaussian Naives model. It struggle with attributing the classes to the good target.\n",
+    "\n",
+    "When it is trained with the individual sample the two cluster doesn't separate the specific class from the other classes. But for the sample n°2 all the class is in one cluster, but the cluster also contains a lot of other classes.\n",
+    "\n",
+    "The classification obtained with and without class attribute are the same. Maybe we should change weight on the class attribute so there is more impact on the distribution.\n",
+    "\n",
+    "I did some tests with using PCA (Principal component analysis) which convert a set of observations of possibly correlated variables to reduce the number of attributes of the samples. And some other with the MinMax scaler. But theses preprocess didn't improve the result, the cluster are still very distributed among the targets.\n",
+    "\n",
+    "When we are comparing the result between basic sample of all data and the resample one, neither of which seems to be better than the other.\n",
+    "\n",
+    "But we can notice in the resample result, that for the target 6 and 7, 9 they have almost a dedicated a cluster (corresponding in the order of cluster 7, 9 and 6)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 12. Other clustering algorithms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.cluster import DBSCAN\n",
+    "\n",
+    "smpl_data = train_resampled.copy()\n",
+    "\n",
+    "dbscan = DBSCAN(eps=100, min_samples=10)\n",
+    "smpl_data[\"cluster\"] = dbscan.fit_predict(smpl_data[smpl_data.columns[:-1]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.cluster import Birch\n",
+    "\n",
+    "smpl_data = train_resampled.copy()\n",
+    "\n",
+    "birch = Birch(threshold=0.5, branching_factor=50, n_clusters=8)\n",
+    "smpl_data[\"cluster\"] = birch.fit_predict(smpl_data[smpl_data.columns[:-1]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.cluster import MeanShift\n",
+    "\n",
+    "print('a')\n",
+    "smpl_data = train_resampled.copy()\n",
+    "\n",
+    "mean_shift = MeanShift(bandwidth=100)\n",
+    "smpl_data[\"cluster\"] = mean_shift.fit_predict(smpl_data[smpl_data.columns[:-1]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max(dbscan.labels_)\n",
+    "\n",
+    "plot_clustering(smpl_data, 10, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
