--- a/jupyter/notebooks/modeling/assessment-DMML.ipynb
+++ b/jupyter/notebooks/modeling/assessment-DMML.ipynb
@@ -9,9 +9,7 @@
     "import pandas as pd\n",
     "from sklearn.utils import shuffle\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
-    "from sklearn.naive_bayes import BernoulliNB\n",
     "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.feature_selection import SelectKBest\n",
     "from sklearn.feature_selection import chi2\n",
@@ -20,7 +18,7 @@
     "import numpy as np\n",
     "import itertools\n",
     "from scipy import stats\n",
-    "import math",
+    "import math\n",
     "%matplotlib inline\n"
    ]
   },
@@ -294,11 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# ros = RandomOverSampler(random_state=0)\n",
@@ -324,11 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\n",
@@ -340,11 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# X_oversampled = pd.DataFrame(data=X_oversampled)\n",
@@ -372,11 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# X_undersampled = pd.DataFrame(data=X_undersampled)\n",
@@ -417,9 +399,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "from sklearn.feature_selection import SelectKBest\n",
-    "from sklearn.feature_selection import chi2\n",
     "print(f\"train_smpl shape:{train_smpl.shape}\")\n",
     "\n",
     "best_20 = SelectKBest(chi2, k=20).fit_transform(train_resampled[train_resampled.columns[:2303]], train_resampled['target'])\n",
@@ -506,11 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# from sklearn.naive_bayes import MultinomialNB\n",
@@ -533,11 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# from sklearn.naive_bayes import MultinomialNB\n",
@@ -559,11 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def plot_confusion_matrix(cm,\n",
@@ -698,14 +665,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_bernoulli_nb(data, num_feat, class_num):\n",
-    "    X_train_2, X_test_2, y_train_2, y_test_2 = train_test_split(data[data.columns[:2303]], data['target'],\n",
-    "                                                                test_size=0.33, random_state=42)\n",
-    "\n",
-    "    clf = BernoulliNB()\n",
-    "    clf.fit(X_train_2, y_train_2)\n",
-    "    print(f\"Bernoulli NB Best {num_feat}0 Class {class_num}: {clf.score(X_test_2, y_test_2)}\")\n",
-    "\n",
     "def run_multi_nb_binary(data, num_feat, class_num):\n",
     "    X_train_2, X_test_2, y_train_2, y_test_2 = train_test_split(data[data.columns[:2303]], data['target'],\n",
     "                                                                test_size=0.33, random_state=42)\n",
