Readd cell lost in merge

--- a/jupyter/notebooks/modeling/assessment-DMML.ipynb
+++ b/jupyter/notebooks/modeling/assessment-DMML.ipynb
@@ -901,6 +901,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import weka.core.classes as wkcore\n",
+    "from weka.classifiers import Classifier\n",
+    "import os\n",
+    "\n",
+    "# cls = Classifier(classname=\"weka.classifiers.trees.J48\", options=[\"-C\", \"0.3\"])\n",
+    "\n",
+    "cmdline = 'weka.classifiers.bayes.BayesNet -D -Q weka.classifiers.bayes.net.search.local.TAN -- -S BAYES -E weka.classifiers.bayes.net.estimate.SimpleEstimator -- -A 0.5'\n",
+    "classifier = wkcore.from_commandline(cmdline, classname=\"weka.classifiers.Classifier\")\n",
+    "# classifier.build_classifier(iris_data)\n",
+    "\n",
+    "# weka.classifiers.bayes.BayesNet -D -Q weka.classifiers.bayes.net.search.local.TAN -- -S BAYES -E weka.classifiers.bayes.net.estimate.SimpleEstimator -- -A 0.5\n",
+    "print(classifier.options)\n",
+    "\n",
+    "# Attempt to convert type formats without intermediate file (failed)\n",
+    "# from scipy.io import arff\n",
+    "# from io import StringIO\n",
+    "# x_train_20_str = StringIO(X_train_20)\n",
+    "# data_xtr20, meta_xtr20 = arff.loadarff(X_train_20)\n",
+    "# df_data = pd.DataFrame(data_xtr20)\n",
+    "\n",
+    "pandas2arff(X_train_20, 'pandasdata.arff')\n",
+    "\n",
+    "# receive arff\n",
+    "from weka.core.converters import Loader\n",
+    "loader = Loader(classname=\"weka.core.converters.ArffLoader\")\n",
+    "arffData = loader.load_file(os.getcwd() + '/' + 'pandasdata.arff')\n",
+    "arffData.class_is_last()\n",
+    "\n",
+    "# clean up\n",
+    "os.remove('pandasdata.arff')\n",
+    "\n",
+    "# classifier.build_classifier(arffData) #TODO hama fix \"class is numeric\" error that this spews\n",
+    "\n",
+    "# print(arffData)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
