Intermediate commit. Show results of weka algo
This includes a cell using TSNE to get small effective datasets for throwing at the classifiers to see if they are set up right without waiting forever while they churn the full data.

--- a/jupyter/notebooks/modeling/assessment-DMML.ipynb
+++ b/jupyter/notebooks/modeling/assessment-DMML.ipynb
@@ -865,7 +865,13 @@
     "    arffList.append(\"@relation \" + wekaname + \"\\n\")\n",
     "    #look at each column's dtype. If it's an \"object\", make it \"nominal\" under Weka for now (can be changed in source for dates.. etc)\n",
     "    for i in range(df.shape[1]):\n",
-    "        if dfcopy.dtypes[i]=='O' or (df.columns[i] in [\"Class\",\"CLASS\",\"class\"]):\n",
+    "        if i>2302:\n",
+    "            print(i)\n",
+    "#             print(dfcopy.dtypes[i])\n",
+    "            print(df.columns[i])\n",
+    "        \n",
+    "        # if dfcopy.dtypes[i]=='O' or\n",
+    "        if (df.columns[i] in [\"Class\",\"CLASS\",\"class\",'target']):\n",
     "            if cleannan!=False:\n",
     "                dfcopy.iloc[:,i] = dfcopy.iloc[:,i].replace(to_replace=-999999999, value=\"?\")\n",
     "            if cleanstringdata!=False:\n",
@@ -883,10 +889,10 @@
     "    for i in range(dfcopy.shape[0]):#instances\n",
     "        _instanceString = \"\"\n",
     "        for j in range(df.shape[1]):#features\n",
-    "                if dfcopy.dtypes[j]=='O':\n",
-    "                    _instanceString+=\"\\\"\" + str(dfcopy.iloc[i,j]) + \"\\\"\"\n",
-    "                else:\n",
-    "                    _instanceString+=str(dfcopy.iloc[i,j])\n",
+    "#                 if dfcopy.dtypes[j]=='O':\n",
+    "#                     _instanceString+=\"\\\"\" + str(dfcopy.iloc[i,j]) + \"\\\"\"\n",
+    "#                 else:\n",
+    "                _instanceString+=str(dfcopy.iloc[i,j])\n",
     "                if j!=dfcopy.shape[1]-1:#if it's not the last feature, add a comma\n",
     "                    _instanceString+=\",\"\n",
     "        _instanceString+=\"\\n\"\n",
@@ -894,8 +900,11 @@
     "            _instanceString = _instanceString.replace(\"-999999999.0\",\"?\") #for numeric missing values\n",
     "            _instanceString = _instanceString.replace(\"\\\"?\\\"\",\"?\") #for categorical missing values\n",
     "        arffList.append(_instanceString)\n",
+    "    print(\"Writing lines...\")\n",
     "    f.writelines(arffList)\n",
+    "    print(\"Closing the file...\")\n",
     "    f.close()\n",
+    "    print(\"Deleting the copy...\")\n",
     "    del dfcopy\n",
     "    return True"
    ]
@@ -906,38 +915,163 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "data_train_20 = pd.concat([X_train_50, y_train_50], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(train_undersampled.dtypes)\n",
+    "# pandas2arff(train_undersampled, 'pandas_undersampled_data.arff')\n",
+    "# pandas2arff(train_smpl_20, 'pandas_train_smpl_20.arff')\n",
+    "pandas2arff(data_train_20, 'data_train_20.arff')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import weka.core.classes as wkcore\n",
-    "from weka.classifiers import Classifier\n",
+    "from weka.classifiers import Classifier, Evaluation\n",
     "import os\n",
     "\n",
     "# cls = Classifier(classname=\"weka.classifiers.trees.J48\", options=[\"-C\", \"0.3\"])\n",
     "\n",
+    "# k2, 1-4 parents:  \n",
+    "# cmdline = 'weka.classifiers.bayes.BayesNet -D -Q weka.classifiers.bayes.net.search.local.K2 -- -P 1 -S BAYES -E weka.classifiers.bayes.net.estimate.SimpleEstimator -- -A 0.5'\n",
+    "# cmdline = 'weka.classifiers.bayes.BayesNet -D -Q weka.classifiers.bayes.net.search.local.K2 -- -P 2 -S BAYES -E weka.classifiers.bayes.net.estimate.SimpleEstimator -- -A 0.5'\n",
+    "# cmdline = 'weka.classifiers.bayes.BayesNet -D -Q weka.classifiers.bayes.net.search.local.K2 -- -P 3 -S BAYES -E weka.classifiers.bayes.net.estimate.SimpleEstimator -- -A 0.5'\n",
+    "# cmdline = 'weka.classifiers.bayes.BayesNet -D -Q weka.classifiers.bayes.net.search.local.K2 -- -P 4 -S BAYES -E weka.classifiers.bayes.net.estimate.SimpleEstimator -- -A 0.5'\n",
+    "\n",
+    "# TAN \n",
     "cmdline = 'weka.classifiers.bayes.BayesNet -D -Q weka.classifiers.bayes.net.search.local.TAN -- -S BAYES -E weka.classifiers.bayes.net.estimate.SimpleEstimator -- -A 0.5'\n",
     "classifier = wkcore.from_commandline(cmdline, classname=\"weka.classifiers.Classifier\")\n",
     "# classifier.build_classifier(iris_data)\n",
     "\n",
     "# weka.classifiers.bayes.BayesNet -D -Q weka.classifiers.bayes.net.search.local.TAN -- -S BAYES -E weka.classifiers.bayes.net.estimate.SimpleEstimator -- -A 0.5\n",
-    "print(classifier.options)\n",
-    "\n",
-    "# Attempt to convert type formats without intermediate file (failed)\n",
-    "# from scipy.io import arff\n",
-    "# from io import StringIO\n",
-    "# x_train_20_str = StringIO(X_train_20)\n",
-    "# data_xtr20, meta_xtr20 = arff.loadarff(X_train_20)\n",
-    "# df_data = pd.DataFrame(data_xtr20)\n",
-    "\n",
-    "pandas2arff(X_train_20, 'pandasdata.arff')\n",
-    "\n",
+    "print(classifier)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.manifold import TSNE\n",
+    "X_train_wee, _, y_train_wee, _ = train_test_split(X_train, y_train, test_size=0.95)\n",
+    "X_train_2D_t_emb = TSNE(perplexity=45).fit_transform(X_train_wee)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# receive arff\n",
     "from weka.core.converters import Loader\n",
-    "loader = Loader(classname=\"weka.core.converters.ArffLoader\")\n",
-    "arffData = loader.load_file(os.getcwd() + '/' + 'pandasdata.arff')\n",
+    "# loader = Loader(classname=\"weka.core.converters.ArffLoader\")\n",
+    "# arffData = loader.load_file(os.getcwd() + '/' + 'data_train_20.arff')\n",
+    "# X_train_2D_t_emb\n",
+    "# Alternatively, ndarray_to_instances\n",
+    "import weka.core.converters as wekaconv\n",
+    "# pd.concat([X_train_50, y_train_50], axis=1)\n",
+    "print(X_train_2D_t_emb.shape)\n",
+    "y_train_wee_np = y_train_wee.to_numpy().reshape(-1, 1)\n",
+    "print(y_train_wee_np.shape)\n",
+    "\n",
+    "arffData = wekaconv.ndarray_to_instances(np.append(X_train_2D_t_emb, values=y_train_wee_np, axis=1), \"tsne_subset\")\n",
     "arffData.class_is_last()\n",
     "\n",
     "# clean up\n",
-    "os.remove('pandasdata.arff')\n",
+    "# os.remove('pandasdata.arff')\n",
     "\n",
-    "# classifier.build_classifier(arffData) #TODO hama fix \"class is numeric\" error that this spews\n",
+    "\n",
+    "# print(arffData.class_attribute)\n",
+    "print(arffData.get_instance(0))\n",
+    "print(arffData.get_instance(1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fix \"class is numeric\"\n",
+    "# First create a Filter to do the job\n",
+    "from weka.filters import Filter\n",
+    "nominaliser = Filter(classname='weka.filters.unsupervised.attribute.NumericToNominal', options=['-R', 'last']) \n",
+    "nominaliser.inputformat(arffData)\n",
+    "\n",
+    "# # Second, apply the filter to the classifer\n",
+    "# from weka.classifiers import FilteredClassifier\n",
+    "# filteredClassifier = FilteredClassifier()\n",
+    "# filteredClassifier.filter = nominaliser\n",
+    "# filteredClassifier.classifier = classifier\n",
+    "\n",
+    "# filtered...\n",
+    "filteredData = nominaliser.filter(arffData)\n",
+    "from weka.core.converters import Saver\n",
+    "saver = Saver(classname=\"weka.core.converters.ArffSaver\")\n",
+    "saver.save_file(filteredData, \"filtered.arff\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classifier.build_classifier(filteredData)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluation = Evaluation(filteredData)\n",
+    "# evaluation.to_help()\n",
+    "print (evaluation.evaluate_model)\n",
+    "evaluation.evaluate_train_test_split(classifier, filteredData, 66.7)\n",
+    "\n",
+    "index = filteredData.class_index\n",
+    "print(index)\n",
+    "print(f\"Instances: {filteredData.num_instances}\\n\")\n",
+    "print(f\"Attributes: {filteredData.num_attributes}\\n\")\n",
+    "print(f\"{evaluation.percent_correct}% correct\")\n",
+    "print(f\"{evaluation.percent_incorrect}% incorrect\")\n",
+    "\n",
+    "print (evaluation.confusion_matrix)\n",
+    "# evaluation.precision(index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import weka.plot.graph as wekagraph  # pygraphviz required here\n",
+    "# wekagraph.plot_dot_graph(classifier.graph)\n",
+    "# print(classifier.graph)\n",
+    "\n",
+    "# import pydot as pydot\n",
+    "\n",
+    "# pydot.graph_from_dot_data(classifier.graph)\n",
+    "\n",
+    "import os\n",
+    "print(os.environ['PATH'])\n",
+    "\n",
     "\n",
     "# print(arffData)"
    ]
