--- a/jupyter/notebooks/modeling/assessment-DMML.ipynb
+++ b/jupyter/notebooks/modeling/assessment-DMML.ipynb
@@ -924,9 +924,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print(train_undersampled.dtypes)\n",
-    "# pandas2arff(train_undersampled, 'pandas_undersampled_data.arff')\n",
-    "# pandas2arff(train_smpl_20, 'pandas_train_smpl_20.arff')\n",
+    "# Output to arff for verification in Weka gui\n",
     "pandas2arff(data_train_20, 'data_train_20.arff')\n",
     "\n"
    ]
@@ -941,6 +939,7 @@
     "from weka.classifiers import Classifier, Evaluation\n",
     "import os\n",
     "\n",
+    "# cmdline doesn't seem to be working - use the basic classes directly (or at least using the options list)\n",
     "# cls = Classifier(classname=\"weka.classifiers.trees.J48\", options=[\"-C\", \"0.3\"])\n",
     "\n",
     "# k2, 1-4 parents:  \n",
@@ -950,8 +949,12 @@
     "# cmdline = 'weka.classifiers.bayes.BayesNet -D -Q weka.classifiers.bayes.net.search.local.K2 -- -P 4 -S BAYES -E weka.classifiers.bayes.net.estimate.SimpleEstimator -- -A 0.5'\n",
     "\n",
     "# TAN \n",
-    "cmdline = 'weka.classifiers.bayes.BayesNet -D -Q weka.classifiers.bayes.net.search.local.TAN -- -S BAYES -E weka.classifiers.bayes.net.estimate.SimpleEstimator -- -A 0.5'\n",
-    "classifier = wkcore.from_commandline(cmdline, classname=\"weka.classifiers.Classifier\")\n",
+    "# cmdline = 'weka.classifiers.bayes.BayesNet -D -Q weka.classifiers.bayes.net.search.local.TAN -- -S BAYES -E weka.classifiers.bayes.net.estimate.SimpleEstimator -- -A 0.5'\n",
+    "# classifier = wkcore.from_commandline(cmdline, classname=\"weka.classifiers.Classifier\")\n",
+    "# classifier = Classifier(classname=\"weka.classifiers.trees.J48\", options=[\"-C\", \"0.3\"])\n",
+    "classifier = Classifier(classname=\"weka.classifiers.bayes.BayesNet\", options=[\"-D\", \"-Q\", \"weka.classifiers.bayes.net.search.local.TAN\", \"--\", \"-S\", \"BAYES\", \"-E\", \"weka.classifiers.bayes.net.estimate.SimpleEstimator\", \"--\", \"-A\", \"0.5\"])\n",
+    "\n",
+    "\n",
     "# classifier.build_classifier(iris_data)\n",
     "\n",
     "# weka.classifiers.bayes.BayesNet -D -Q weka.classifiers.bayes.net.search.local.TAN -- -S BAYES -E weka.classifiers.bayes.net.estimate.SimpleEstimator -- -A 0.5\n",
@@ -965,8 +968,9 @@
    "outputs": [],
    "source": [
     "from sklearn.manifold import TSNE\n",
-    "X_train_wee, _, y_train_wee, _ = train_test_split(X_train, y_train, test_size=0.95)\n",
-    "X_train_2D_t_emb = TSNE(perplexity=45).fit_transform(X_train_wee)"
+    "# Don't downsize - use it all!\n",
+    "# X_train_wee, _, y_train_wee, _ = train_test_split(X_train_res, y_train_res, test_size=0.95) \n",
+    "X_train_2D_t_emb = TSNE(perplexity=45).fit_transform(X_train_res)"
    ]
   },
   {
@@ -976,18 +980,17 @@
    "outputs": [],
    "source": [
     "# receive arff\n",
-    "from weka.core.converters import Loader\n",
+    "# from weka.core.converters import Loader\n",
     "# loader = Loader(classname=\"weka.core.converters.ArffLoader\")\n",
     "# arffData = loader.load_file(os.getcwd() + '/' + 'data_train_20.arff')\n",
-    "# X_train_2D_t_emb\n",
+    "\n",
     "# Alternatively, ndarray_to_instances\n",
     "import weka.core.converters as wekaconv\n",
-    "# pd.concat([X_train_50, y_train_50], axis=1)\n",
     "print(X_train_2D_t_emb.shape)\n",
-    "y_train_wee_np = y_train_wee.to_numpy().reshape(-1, 1)\n",
+    "y_train_res_np = y_train_res.to_numpy().reshape(-1, 1)\n",
     "print(y_train_wee_np.shape)\n",
     "\n",
-    "arffData = wekaconv.ndarray_to_instances(np.append(X_train_2D_t_emb, values=y_train_wee_np, axis=1), \"tsne_subset\")\n",
+    "arffData = wekaconv.ndarray_to_instances(np.append(X_train_2D_t_emb, values=y_train_res_np, axis=1), \"tsne_subset\")\n",
     "arffData.class_is_last()\n",
     "\n",
     "# clean up\n",
@@ -1012,6 +1015,7 @@
     "nominaliser.inputformat(arffData)\n",
     "\n",
     "# # Second, apply the filter to the classifer\n",
+    "# # filteredClassifier doesn't seem to be working - use the simple classes in series.\n",
     "# from weka.classifiers import FilteredClassifier\n",
     "# filteredClassifier = FilteredClassifier()\n",
     "# filteredClassifier.filter = nominaliser\n",
@@ -1030,7 +1034,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "classifier.build_classifier(filteredData)"
+    "classifier.build_classifier(filteredData)\n",
+    "print(classifier)"
    ]
   },
   {
@@ -1039,20 +1044,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "evaluation = Evaluation(filteredData)\n",
-    "# evaluation.to_help()\n",
-    "print (evaluation.evaluate_model)\n",
-    "evaluation.evaluate_train_test_split(classifier, filteredData, 66.7)\n",
+    "from weka.core.classes import Random\n",
     "\n",
-    "index = filteredData.class_index\n",
-    "print(index)\n",
+    "evaluation = Evaluation(filteredData)\n",
+    "# print (evaluation.evaluate_model())\n",
+    "evaluation.evaluate_train_test_split(classifier, filteredData, 66.7, rnd=Random(42))\n",
+    "print(evaluation.header)\n",
+    "\n",
+    "\n",
     "print(f\"Instances: {filteredData.num_instances}\\n\")\n",
     "print(f\"Attributes: {filteredData.num_attributes}\\n\")\n",
     "print(f\"{evaluation.percent_correct}% correct\")\n",
     "print(f\"{evaluation.percent_incorrect}% incorrect\")\n",
     "\n",
-    "print (evaluation.confusion_matrix)\n",
-    "# evaluation.precision(index)"
+    "\n",
+    "print(f\"{evaluation.precision(filteredData.class_index)} precision\")\n",
+    "print(f\"{evaluation.recall(filteredData.class_index)} recall\")\n",
+    "\n",
+    "print (evaluation.confusion_matrix)"
    ]
   },
   {
@@ -1061,19 +1070,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import weka.plot.graph as wekagraph  # pygraphviz required here\n",
-    "# wekagraph.plot_dot_graph(classifier.graph)\n",
-    "# print(classifier.graph)\n",
+    "# import weka.plot.graph as wekagraph  # pygraphviz required here\n",
+    "# # wekagraph.plot_dot_graph(classifier.graph)\n",
+    "# # print(classifier.graph)\n",
     "\n",
-    "# import pydot as pydot\n",
+    "# # import pydot as pydot\n",
     "\n",
-    "# pydot.graph_from_dot_data(classifier.graph)\n",
+    "# # pydot.graph_from_dot_data(classifier.graph)\n",
     "\n",
-    "import os\n",
-    "print(os.environ['PATH'])\n",
+    "# import os\n",
+    "# print(os.environ['PATH'])\n",
     "\n",
     "\n",
-    "# print(arffData)"
+    "# ## https://groups.google.com/forum/#!topic/python-weka-wrapper/NxpViz49554\n",
+    "# # https://docs.google.com/viewer?a=v&pid=forums&srcid=MTM1ODQ2MTMwNjI4MjExNjM3MjcBMDc1Njk1MTUxNTYzNjczMDA1NTYBZEZDM1IyYXlCd0FKATAuMQEBdjI&authuser=0\n",
+    "# import subprocess\n",
+    "# import traceback\n",
+    "# from PIL import Image\n",
+    "# # not available on Windows 64bit:\n",
+    "# #plot_graph.plot_dot_graph(classifier.graph)\n",
+    "# # call dot manually\n",
+    "# graph_file = \"graph.dot\"\n",
+    "# png_file = \"graph.png\"\n",
+    "# print(\"\\n--> writing graph file:\\n\")\n",
+    "# with open(graph_file, \"w\") as text_file:\n",
+    "#     text_file.write(classifier.graph)\n",
+    "# params = [\"dot\", \"-Tpng\", \"-o\" + png_file, graph_file]\n",
+    "# print(\"\\n--> calling dot \\n\")\n",
+    "# print(params)\n",
+    "# try:\n",
+    "#     completed = subprocess.call(params)\n",
+    "#     if completed.returncode == 0:\n",
+    "#         print(\"--> successful!\")\n",
+    "#         image = Image.open(png_file)\n",
+    "#         image.show()\n",
+    "#     else:\n",
+    "#         print(\"--> exit code:\", completed.returncode)\n",
+    "#         print(\"--> stdout\")\n",
+    "#         print(completed.stdout)\n",
+    "#         print(\"--> stderr\")\n",
+    "#         print(completed.returncode)\n",
+    "# except:\n",
+    "#     print(traceback.format_exc())\n"
    ]
   },
   {
