Add experiment structure for complex bayes
It now records multiple results rather than just the one on screen.
Thoroughly inspired by the q 4/5/6 code for coherence.

Also, up the JVM memory limit. I'm not sure if I was running into this, but its good to know that it shouldn't be the killer issue anymore when something does go wrong.

--- a/jupyter/notebooks/modeling/assessment-DMML.ipynb
+++ b/jupyter/notebooks/modeling/assessment-DMML.ipynb
@@ -804,8 +804,7 @@
    "outputs": [],
    "source": [
     "import weka.core.jvm as jvm\n",
-    "\n",
-    "jvm.start()"
+    "jvm.start(max_heap_size='7g') # Hopefully big enough"
    ]
   },
   {
@@ -915,7 +914,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_train_20 = pd.concat([X_train_50, y_train_50], axis=1)"
+    "data_train_20 = pd.concat([X_train_20, y_train_20], axis=1)"
    ]
   },
   {
@@ -942,23 +941,20 @@
     "# cmdline doesn't seem to be working - use the basic classes directly (or at least using the options list)\n",
     "# cls = Classifier(classname=\"weka.classifiers.trees.J48\", options=[\"-C\", \"0.3\"])\n",
     "\n",
+    "# Weka's naive Bayes, to give comparable results to the sklearn method\n",
+    "NBClassifier = Classifier(classname=\"weka.classifiers.bayes.NaiveBayes\")\n",
+    "\n",
     "# k2, 1-4 parents:  \n",
-    "# cmdline = 'weka.classifiers.bayes.BayesNet -D -Q weka.classifiers.bayes.net.search.local.K2 -- -P 1 -S BAYES -E weka.classifiers.bayes.net.estimate.SimpleEstimator -- -A 0.5'\n",
-    "# cmdline = 'weka.classifiers.bayes.BayesNet -D -Q weka.classifiers.bayes.net.search.local.K2 -- -P 2 -S BAYES -E weka.classifiers.bayes.net.estimate.SimpleEstimator -- -A 0.5'\n",
-    "# cmdline = 'weka.classifiers.bayes.BayesNet -D -Q weka.classifiers.bayes.net.search.local.K2 -- -P 3 -S BAYES -E weka.classifiers.bayes.net.estimate.SimpleEstimator -- -A 0.5'\n",
-    "# cmdline = 'weka.classifiers.bayes.BayesNet -D -Q weka.classifiers.bayes.net.search.local.K2 -- -P 4 -S BAYES -E weka.classifiers.bayes.net.estimate.SimpleEstimator -- -A 0.5'\n",
+    "k2classifiers = []\n",
+    "for i in range(1,5):\n",
+    "    classifier = Classifier(classname=\"weka.classifiers.bayes.BayesNet\", options=[\"-D\", \"-Q\", \"weka.classifiers.bayes.net.search.local.K2\", \"--\", \"-P\", f\"-{i}\", \"-S\", \"BAYES\", \"-E\", \"weka.classifiers.bayes.net.estimate.SimpleEstimator\", \"--\", \"-A\", \"0.5\"])\n",
+    "    k2classifiers.append(classifier)\n",
     "\n",
     "# TAN \n",
-    "# cmdline = 'weka.classifiers.bayes.BayesNet -D -Q weka.classifiers.bayes.net.search.local.TAN -- -S BAYES -E weka.classifiers.bayes.net.estimate.SimpleEstimator -- -A 0.5'\n",
-    "# classifier = wkcore.from_commandline(cmdline, classname=\"weka.classifiers.Classifier\")\n",
-    "# classifier = Classifier(classname=\"weka.classifiers.trees.J48\", options=[\"-C\", \"0.3\"])\n",
-    "classifier = Classifier(classname=\"weka.classifiers.bayes.BayesNet\", options=[\"-D\", \"-Q\", \"weka.classifiers.bayes.net.search.local.TAN\", \"--\", \"-S\", \"BAYES\", \"-E\", \"weka.classifiers.bayes.net.estimate.SimpleEstimator\", \"--\", \"-A\", \"0.5\"])\n",
+    "tanClassifier = Classifier(classname=\"weka.classifiers.bayes.BayesNet\", options=[\"-D\", \"-Q\", \"weka.classifiers.bayes.net.search.local.TAN\", \"--\", \"-S\", \"BAYES\", \"-E\", \"weka.classifiers.bayes.net.estimate.SimpleEstimator\", \"--\", \"-A\", \"0.5\"])\n",
     "\n",
     "\n",
-    "# classifier.build_classifier(iris_data)\n",
-    "\n",
-    "# weka.classifiers.bayes.BayesNet -D -Q weka.classifiers.bayes.net.search.local.TAN -- -S BAYES -E weka.classifiers.bayes.net.estimate.SimpleEstimator -- -A 0.5\n",
-    "print(classifier)"
+    "# weka.classifiers.bayes.BayesNet -D -Q weka.classifiers.bayes.net.search.local.TAN -- -S BAYES -E weka.classifiers.bayes.net.estimate.SimpleEstimator -- -A 0.5\n"
    ]
   },
   {
@@ -968,9 +964,41 @@
    "outputs": [],
    "source": [
     "from sklearn.manifold import TSNE\n",
-    "# Don't downsize - use it all!\n",
-    "# X_train_wee, _, y_train_wee, _ = train_test_split(X_train_res, y_train_res, test_size=0.95) \n",
-    "X_train_2D_t_emb = TSNE(perplexity=45).fit_transform(X_train_res)"
+    "# Don't downsize - use it all! train_resampled has some 12k instances, so this takes a while\n",
+    "X_train_wee, _, y_train_wee, _ = train_test_split(X_train_res, y_train_res, test_size=0.95) \n",
+    "X_wee_embeds = TSNE(n_components=2, perplexity=20).fit_transform(X_train_wee.copy())\n",
+    "X_wee_3_embeds = TSNE(n_components=3, perplexity=5).fit_transform(X_train_wee.copy())\n",
+    "X_train_2D_t_emb = TSNE(perplexity=30).fit_transform(train_resampled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure()\n",
+    "# plt.scatter(x=X_train_2D_t_emb[:,0], y=X_train_2D_t_emb[:,1], c=y_train_res)\n",
+    "plt.scatter(x=X_wee_embeds[:,0], y=X_wee_embeds[:,1], c=y_train_wee)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "\n",
+    "fig = plt.figure()\n",
+    "ax = Axes3D(fig)\n",
+    "for label in range(10):\n",
+    "    x_train_tmp = X_wee_3_embeds[y_train_wee==label]\n",
+    "    ax.scatter(x_train_tmp[:,0], x_train_tmp[:,1], x_train_tmp[:,2], \n",
+    "               alpha=0.75, label=label)\n",
+    "ax.legend()\n",
+    "plt.show()"
    ]
   },
   {
@@ -987,11 +1015,20 @@
     "# Alternatively, ndarray_to_instances\n",
     "import weka.core.converters as wekaconv\n",
     "print(X_train_2D_t_emb.shape)\n",
-    "y_train_res_np = y_train_res.to_numpy().reshape(-1, 1)\n",
-    "print(y_train_wee_np.shape)\n",
+    "y_train_res_np = y_train_res.to_numpy(copy=True).reshape(-1, 1)\n",
+    "print(y_train_res_np.shape)\n",
     "\n",
     "arffData = wekaconv.ndarray_to_instances(np.append(X_train_2D_t_emb, values=y_train_res_np, axis=1), \"tsne_subset\")\n",
     "arffData.class_is_last()\n",
+    "# pd.concat([X_train_50, y_train_50]\n",
+    "print(X_train_res.shape)\n",
+    "print(y_train_res.shape)\n",
+    "# train_resampled = pd.concat([X_resampled, y_resampled], axis=1)\n",
+    "resData = wekaconv.ndarray_to_instances(train_resampled.to_numpy().copy(order='C'), \"all_features\")\n",
+    "# resData = wekaconv.ndarray_to_instances(np.append(X_train_res, values=y_train_res_np, axis=1), \"all_features\")\n",
+    "\n",
+    "resData.class_is_last()\n",
+    "\n",
     "\n",
     "# clean up\n",
     "# os.remove('pandasdata.arff')\n",
@@ -1013,6 +1050,8 @@
     "from weka.filters import Filter\n",
     "nominaliser = Filter(classname='weka.filters.unsupervised.attribute.NumericToNominal', options=['-R', 'last']) \n",
     "nominaliser.inputformat(arffData)\n",
+    "bigNominaliser = Filter(classname='weka.filters.unsupervised.attribute.NumericToNominal', options=['-R', 'last']) \n",
+    "bigNominaliser.inputformat(resData)\n",
     "\n",
     "# # Second, apply the filter to the classifer\n",
     "# # filteredClassifier doesn't seem to be working - use the simple classes in series.\n",
@@ -1034,8 +1073,103 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "classifier.build_classifier(filteredData)\n",
-    "print(classifier)"
+    "# Define experiment\n",
+    "from weka.core.classes import Random\n",
+    "\n",
+    "# evaluation = Evaluation(filteredData)\n",
+    "# # print (evaluation.evaluate_model())\n",
+    "# evaluation.evaluate_train_test_split(classifier, filteredData, 66.7, rnd=Random(42))\n",
+    "# print(evaluation.header)\n",
+    "\n",
+    "\n",
+    "def run_weka_test(data, classifier):\n",
+    "    eva = Evaluation(data)\n",
+    "    eva.evaluate_train_test_split(classifier, data, 66.7, rnd=Random(42))\n",
+    "    return eva\n",
+    "\n",
+    "def print_results(evaluation):\n",
+    "    print(f\"{evaluation.percent_correct}% correct\")\n",
+    "    print(f\"{evaluation.percent_incorrect}% incorrect\")\n",
+    "    print(f\"{evaluation.precision(filteredData.class_index)} precision\")\n",
+    "    print(f\"{evaluation.recall(filteredData.class_index)} recall\")\n",
+    "    plot_confusion_matrix(evaluation.confusion_matrix, target_names=y_train_res.unique().sort())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test with simple feature selection \n",
+    "print(f\"\\nK2, 1 parent, :\\n __________________________________\")\n",
+    "print(data_train_20.shape)\n",
+    "arff_data_train_20 = wekaconv.ndarray_to_instances(data_train_20.to_numpy().copy(order='C'), \"20_features\")\n",
+    "arff_data_train_20.class_is_last()\n",
+    "\n",
+    "\n",
+    "nominaliser_side = Filter(classname='weka.filters.unsupervised.attribute.NumericToNominal', options=['-R', 'last']) \n",
+    "nominaliser_side.inputformat(arff_data_train_20)\n",
+    "evalu = run_weka_test(nominaliser_side.filter(arff_data_train_20), k2classifiers[0])\n",
+    "print_results(evalu)\n",
+    "print(evalu.confusion_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run experiment\n",
+    "\n",
+    "# Naive Bayes\n",
+    "print(f\"\\nNaive Bayes Classifier (for comparison):\\n __________________________________\")\n",
+    "print_results(run_weka_test(filteredData, NBClassifier))\n",
+    "\n",
+    "# K2\n",
+    "for i, cls in enumerate(k2classifiers):\n",
+    "\n",
+    "    s = 's' if i != 0 else ''\n",
+    "    print(f\"\\nK2 Classifier, {i+1} Parent{s}:\\n __________________________________\")\n",
+    "    print_results(run_weka_test(filteredData, cls))\n",
+    "\n",
+    "# TAN\n",
+    "print(f\"\\nTAN Classifier:\\n __________________________________\")\n",
+    "print_results(run_weka_test(filteredData, tanClassifier))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print_results(run_weka_test(bigNominaliser.filter(resData), tanClassifier))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save trained classifiers\n",
+    "import weka.core.serialization as cereal\n",
+    "cereal.write('tanClassifier.saved', tanClassifier)\n",
+    "# with open('tanClassifier.pickle', 'wb') as f:\n",
+    "#     # Pickle the 'data' dictionary using the highest protocol available.\n",
+    "#     pickle.dump(tanClassifier, f, pickle.HIGHEST_PROTOCOL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "read_tan = Classifier(jobject=cereal.read('tanClassifier.saved'))\n",
+    "print(read_tan.info)"
    ]
   },
   {
@@ -1048,7 +1182,7 @@
     "\n",
     "evaluation = Evaluation(filteredData)\n",
     "# print (evaluation.evaluate_model())\n",
-    "evaluation.evaluate_train_test_split(classifier, filteredData, 66.7, rnd=Random(42))\n",
+    "evaluation.evaluate_train_test_split(tanClassifier, filteredData, 66.7, rnd=Random(42))\n",
     "print(evaluation.header)\n",
     "\n",
     "\n",
@@ -1061,7 +1195,8 @@
     "print(f\"{evaluation.precision(filteredData.class_index)} precision\")\n",
     "print(f\"{evaluation.recall(filteredData.class_index)} recall\")\n",
     "\n",
-    "print (evaluation.confusion_matrix)"
+    "print (evaluation.confusion_matrix)\n",
+    "plot_confusion_matrix(evaluation.confusion_matrix, target_names=y_train_res.unique())"
    ]
   },
   {
