--- a/jupyter/notebooks/modeling/assessment-DMML.ipynb
+++ b/jupyter/notebooks/modeling/assessment-DMML.ipynb
@@ -1764,11 +1764,9 @@
     "\n",
     "The classification obtained with and without class attribute are the same. Maybe we should change weight on the class attribute so there is more impact on the distribution.\n",
     "\n",
-    "I did some tests with using PCA (Principal component analysis) which convert a set of observations of possibly correlated variables to reduce the number of attributes of the samples. And some other with the MinMax scaler. But theses preprocess didn't improve the result, the cluster are still very distributed among the targets.\n",
+    "I did some tests with using PCA (Principal component analysis) which convert a set of observations of possibly correlated variables to reduce the number of attributes of the samples. And some other with the MinMax scaler. But theses preprocess didn't improve the result, the cluster are still very distributed among the classes.\n",
     "\n",
-    "When we are comparing the result between basic sample of all data and the resample one, neither of which seems to be better than the other.\n",
-    "\n",
-    "But we can notice in the resample result, that for the target 6 and 7, 9 they have almost a dedicated a cluster (corresponding in the order of cluster 7, 9 and 6)"
+    "When we are comparing the result between basic sample of all data and the resample one, in both of the results the cluster are very distrubuted amoug the different classes. But we can notice in the resample result, that for the target 6 and 7, 9 they have almost a dedicated a cluster (corresponding in the order of cluster 5, 8 and 7)"
    ]
   },
   {
@@ -1792,7 +1790,7 @@
     "\n",
     "smpl_data = train_resampled.copy()\n",
     "\n",
-    "dbscan = DBSCAN(eps=100, min_samples=10)\n",
+    "dbscan = DBSCAN(eps=300, min_samples=30)\n",
     "smpl_data[\"cluster\"] = dbscan.fit_predict(smpl_data[smpl_data.columns[:-1]])"
    ]
   },
@@ -1804,6 +1802,20 @@
      "is_executing": false
     }
    },
+   "outputs": [],
+   "source": [
+    "from sklearn.cluster import OPTICS\n",
+    "\n",
+    "smpl_data = train_resampled.copy()\n",
+    "\n",
+    "optics = OPTICS(min_samples=30)\n",
+    "smpl_data[\"cluster\"] = optics.fit_predict(smpl_data[smpl_data.columns[:-1]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.cluster import Birch\n",
@@ -1843,9 +1855,9 @@
    },
    "outputs": [],
    "source": [
-    "max(dbscan.labels_)\n",
+    "print(max(dbscan.labels_))\n",
     "\n",
-    "plot_clustering(smpl_data, 10, 10)"
+    "plot_clustering(smpl_data, 10, max(dbscan.labels_))"
    ]
   },
   {
